tests/ui/editions/never-type-fallback-breaking.e2024.stderr
error[E0277]: the trait bound `!: Default` is not satisfied
  --> $DIR/never-type-fallback-breaking.rs:21:17
   |
LL |         true => Default::default(),
   |                 ^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `!`
   |
   = note: this error might have been caused by changes to Rust's type-inference algorithm (see issue #48950 <https://github.com/rust-lang/rust/issues/48950> for more information)
   = help: did you intend to use the type `()` here instead?

error[E0277]: the trait bound `!: Default` is not satisfied
  --> $DIR/never-type-fallback-breaking.rs:36:5
   |
LL |     deserialize()?;
   |     ^^^^^^^^^^^^^ the trait `Default` is not implemented for `!`
   |
   = note: this error might have been caused by changes to Rust's type-inference algorithm (see issue #48950 <https://github.com/rust-lang/rust/issues/48950> for more information)
   = help: did you intend to use the type `()` here instead?
note: required by a bound in `deserialize`
  --> $DIR/never-type-fallback-breaking.rs:32:23
   |
LL |     fn deserialize<T: Default>() -> Option<T> {
   |                       ^^^^^^^ required by this bound in `deserialize`

error[E0277]: the trait bound `(): From<!>` is not satisfied
  --> $DIR/never-type-fallback-breaking.rs:49:5
   |
LL |     help(1)?;
   |     ^^^^^^^ the trait `From<!>` is not implemented for `()`
   |
   = help: the following other types implement trait `From<T>`:
             `(T, T)` implements `From<[T; 2]>`
             `(T, T, T)` implements `From<[T; 3]>`
             `(T, T, T, T)` implements `From<[T; 4]>`
             `(T, T, T, T, T)` implements `From<[T; 5]>`
             `(T, T, T, T, T, T)` implements `From<[T; 6]>`
             `(T, T, T, T, T, T, T)` implements `From<[T; 7]>`
             `(T, T, T, T, T, T, T, T)` implements `From<[T; 8]>`
             `(T, T, T, T, T, T, T, T, T)` implements `From<[T; 9]>`
           and 4 others
   = note: required for `!` to implement `Into<()>`
note: required by a bound in `help`
  --> $DIR/never-type-fallback-breaking.rs:43:20
   |
LL | fn help<'a: 'a, T: Into<()>, U>(_: U) -> Result<T, ()> {
   |                    ^^^^^^^^ required by this bound in `help`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0277`.
